# CardGame

./: .gitignore  CMakeLists.txt  README.md  build.sh
Mako_Game/: CMakeLists.txt
Mako_Game/assets/cards/: resources.qrc
Mako_Game/src/: Card.cpp  Card.h  CardTranslator.cpp  CardTypes.h  ClientBase.cpp  ClientBase.h  ClientBot.cpp  ClientPlayer.cpp  GameMaster.cpp  GameMaster.h  Logger.cpp  Logger.h  MakaoValidator.cpp  RequestTranslator.cpp  RequestTranslator.h  SpecialRules.cpp  StringOperations.h  gamecontroller.cpp  gamecontroller.h  mainwindow.cpp  mainwindow.h
client/: CMakeLists.txt
client/include/: ClientBase.h  ClientConsole.h  RequestTranslator.h  StringOperations.h
client/src/: ClientBase.cpp  ClientConsole.cpp  RequestTranslator.cpp  StringOperations.cpp  main.cpp
internal/include/: Card.h  CardTranslator.h  ClientBase.h  ClientPlayer.h  GameMaster.h  MakaoValidator.h  RequestTranslator.h  Server.h  StringOperations.h
internal/src/: CardHolder.cpp  ClientBase.cpp  EnvReader.cpp  GameMaster.cpp  RequestTranslator.cpp  Server.cpp  SpecialRules.cpp  Validator.cpp  main.cpp
logs/: .log_1740838354817367999.txt
preRefaktor/: GameLoop.cpp  GameLoop.h  GameMaster.cpp  GameMaster.h  PlayerClient.cpp  PlayerClient.h  PlayerPerson.cpp  Validator.cpp  Validator.h
server/: CMakeLists.txt
server/disregarded/: EnvReader.h  Server.cpp  Server.h
server/include/: Card.h  CardTypes.h  ClientBase.h  ClientBot.h  ClientWeb.h  EnvReader.h  GameMaster.h  GameModes.h  Logger.h  MakaoRules.h  RequestTranslator.h  Server.h  SpecialRules.h  StringOperations.h  Validator.h
server/src/: Card.cpp  CardHolder.cpp  CardTranslator.cpp  CardTypes.cpp  ClientBase.cpp  ClientBot.cpp  ClientPlayer.cpp  ClientWeb.cpp  Deck.cpp  EnvReader.cpp  GameMaster.cpp  Logger.cpp  MakaoRules.cpp  MakaoValidator.cpp  RequestTranslator.cpp  Server.cpp  SpecialRules.cpp  StringOperations.cpp  Validator.cpp  main.cpp
someRandomShit/: RequestSketch.txt
src/: Card.cpp  CardHolder.h  CardTranslator.cpp  CardTranslator.h  CardTypes.cpp  CardTypes.h  ClientBase.cpp  ClientBase.h  Deck.cpp  Deck.h  GameLoop.cpp  GameLoop.h  GameMaster.cpp  GameMaster.h  MakaoRules.cpp  MakaoRules.h  MakaoValidator.cpp  MakaoValidator.h  PlayerClient.cpp  PlayerClient.h  PlayerPerson.cpp  PlayerPerson.h  SpecialRules.cpp  SpecialRules.h  StringOperations.cpp  StringOperations.h  Validator.cpp  Validator.h  main.cpp
src/Cards/: CardTranslator.cpp  CardTranslator.h  CardTypes.cpp  Deck.cpp
src/Clients/: ClientBase.cpp  ClientBase.h  ClientBot.cpp  ClientBot.h  ClientPlayer.cpp  ClientPlayer.h
src/Other/: Logger.cpp  Logger.h  StringOperations.cpp  StringOperations.h
src/Rules/: GameMaster.cpp  GameMaster.h  GameModes.h  MakaoRules.cpp  MakaoRules.h  MakaoValidator.cpp  MakaoValidator.h  SpecialRules.cpp  SpecialRules.h  Validator.h
src/Server/: Server.h
src/Translator/: RequestTranslator.cpp  RequestTranslator.h  RequestTranslatorTest.cpp  RequestTranslatorTest.h
